trying to fix overlap on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ main .quote-author {
     @media (max-height: 720px) {
         main .quote-text {
             font-size: 1.4em;
+            max-height: calc(100vh - 80px);
         }
     }
 }
